feat(language): validate module isolation